# syncts-container

./: .cproject  .gitignore  .project  README.md
src/: Acceptor.h  CMakeLists.txt  Server.h  Service.h  SyncTimeserver.cpp
src/.deps/: SyncTimeserver.Po
